# LedgerFlow

./: .gitignore  LedgerFlow_PROJECT_SPEC.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt  run_worker.py
backend/app/: __init__.py  audit.py  config.py  db.py  gate.py  main.py  pipeline.py  queue.py  seed.py  worker.py
backend/app/api/: __init__.py  ingest.py  invoices.py  metrics.py  review.py
backend/app/extract/: __init__.py  document.py  graph.py  prompts.py  provider.py
backend/app/extract/providers/: gemini_provider.py  openai_provider.py  stub.py
backend/app/ingest/: __init__.py  hashing.py  service.py  watcher.py
backend/app/models/: __init__.py  orm.py  schemas.py  status.py
backend/app/observability/: __init__.py  metrics.py
backend/app/sync/: __init__.py  base.py  mock_api.py
backend/app/validate/: __init__.py  rules.py  vendors.py
backend/tests/: conftest.py  test_gate_unit.py  test_pipeline.py  test_review.py  test_state_machine.py
docs/: ARCHITECTURE.md  DEMO.md
eval/: generate_fixtures.py  labels.jsonl  run_eval.py
eval/fixtures/: clean_00.txt  clean_01.txt  clean_02.txt  clean_03.txt  clean_04.txt  clean_05.txt  clean_06.txt  clean_07.txt  clean_08.txt  clean_09.txt  clean_10.txt  clean_11.txt  clean_12.txt  clean_13.txt  clean_14.txt  clean_15.txt  clean_16.txt  clean_17.txt  clean_18.txt  clean_19.txt  clean_20.txt  clean_21.txt  (+8 more)
frontend/: package-lock.json  package.json  tailwind.config.ts
scripts/: reset_local.py  seed_demo.py
(+12 files in other folders)
